# Neural_ReCFR_B

./: CMakeLists.txt  README.md  docker_build.sh  holdem.limit.2p.game  play_neural_recfr_b.sh  pre_run.sh  run_match.py  run_neural_recfr_b_FHP.sh  run_neural_recfr_b_HULH.sh
neural_recfr_b/: CMakeLists.txt  deep_cfr.h  deep_cfr_model.py  export_vpnet.py  local_best_response.cc  local_best_response.h  neural_recfr_b.cc  neural_recfr_b_solver.cc  neural_recfr_b_solver.h  play.cc  play.h  run_deep_cfr.cc  vpnet.cc  vpnet.h
